--- a/core/api/src/main/resources/messages.properties
+++ b/core/api/src/main/resources/messages.properties
@@ -6,5 +6,6 @@ com.kildeen.ref.system.Pages.Admin.User = User Management
 com.kildeen.ref.system.Pages.Admin.Group = Group Management
 com.kildeen.ref.system.Pages.Admin.User.CreateUser = Create User
 com.kildeen.ref.system.Pages.Admin.User.CreateUser.Delete = Delete
-com.kildeen.ref.system.Pages.Admin.Group.CreateGroup = Create Group
-com.kildeen.ref.system.Pages.Admin.Group.CreateGroup.Delete = Delete
+com.kildeen.ref.system.Pages.Admin.Group.GroupSetup = Setup Group
+com.kildeen.ref.system.Pages.Admin.Group.Groups = Groups
+com.kildeen.ref.system.Pages.Admin.Group.GroupSetup.Delete = Delete
