--- a/core/api/src/main/resources/messages.properties
+++ b/core/api/src/main/resources/messages.properties
@@ -1,11 +1,14 @@
-groupCreated = Group %s created
+enityCreated = %s %s created
+
 com.kildeen.ref.system.Pages = All Pages
 com.kildeen.ref.system.Index = Index
 com.kildeen.ref.system.Pages.Admin = Admin
 com.kildeen.ref.system.Pages.Admin.User = User Management
 com.kildeen.ref.system.Pages.Admin.Group = Group Management
-com.kildeen.ref.system.Pages.Admin.User.CreateUser = Create User
-com.kildeen.ref.system.Pages.Admin.User.CreateUser.Delete = Delete
+com.kildeen.ref.system.Pages.Admin.User.UserSetup = Setup User
+ com.kildeen.ref.system.Pages.Admin.User.UserOverview = User Overview
+com.kildeen.ref.system.Pages.Admin.User.UserSetup.Delete = Delete
 com.kildeen.ref.system.Pages.Admin.Group.GroupSetup = Setup Group
 com.kildeen.ref.system.Pages.Admin.Group.GroupOverview = Group Overview
 com.kildeen.ref.system.Pages.Admin.Group.GroupSetup.Delete = Delete
+
