--- a/core/api/src/main/resources/messages.properties
+++ b/core/api/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ com.kildeen.ref.system.Pages.Admin.Group.GroupSetup.Delete = Delete
 com.kildeen.ref.system.Pages.Content = Fact
 com.kildeen.ref.system.Pages.Content.FactOverview = Facts
 com.kildeen.ref.system.Pages.Content.FactSetup = Setup Fact
+com.kildeen.ref.system.Pages.Content.LatestFact = Latest Fact
 
 com.kildeen.ref.system.Pages.PermissionError =  Error
 
